src/objects/Countries_Regions_Continents_ISO_Codes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Countries, Regions, Continents and ISO Codes</description>
    <fields>
        <fullName>Continent__c</fullName>
        <label>Continent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalId>true</externalId>
        <label>Country</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_2__c</fullName>
        <label>ISO (2)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_3__c</fullName>
        <label>ISO (3)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Region__c</fullName>
        <label>Original Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Countries Regions Continents ISO Codes</label>
</CustomObject>